Remove Android code from shared Java file (#465)