@@ -15,8 +15,6 @@
 //
 package com.couchbase.lite.internal.exec;
 
-import android.os.Build;
-
 import androidx.annotation.GuardedBy;
 import androidx.annotation.NonNull;
 import androidx.annotation.Nullable;
@@ -166,11 +164,7 @@ class SerialExecutor implements ExecutionService.CloseableExecutor {
         if (nextTask == null) { return; }
 
         try { executor.execute(() -> {
-            if (Build.VERSION.SDK_INT >= Build.VERSION_CODES.BAKLAVA) {
-                currentThread = Thread.currentThread().threadId();
-            } else {
-                currentThread = Thread.currentThread().getId();
-            }
+            currentThread = Thread.currentThread().getId();
             nextTask.run();
             currentThread = -1;
         }); }
